# deeponion-cli

./: DeepOnion-cli.pro  Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile.am  clientversion.h  deeponion-cli-res.rc  deeponion-cli.cpp  deeponion-cli.h  rpcclient.h  rpcprotocol.h  util.h
src/qt/locale/: bitcoin_en.ts
src/test/: rpc_tests.cpp
